Bug 482389 - Clipboard shows an unreasonable amount of characters in a single line
Summary: Clipboard shows an unreasonable amount of characters in a single line
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: 6.0.0
Platform: NixOS Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-04 15:15 UTC by Dominique Hummel
Modified: 2024-03-04 22:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1
Sentry Crash Report:


Attachments
Screenshot of the history popup (297.24 KB, image/png)
2024-03-04 15:15 UTC, Dominique Hummel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dominique Hummel 2024-03-04 15:15:21 UTC
Created attachment 166399 [details]
Screenshot of the history popup

SUMMARY
The clipboard history popup shows an unreasonable amount of characters in a single line. When copying a long line of text (e.g. a link with trackers in it), the history window assumes an absurd horizontal size.


STEPS TO REPRODUCE
1. Copy a long link
2. Open clipboard history with Meta+V

OBSERVED RESULT
The clipboard history displays a large amount of characters in one line, causing the window to assume a significant horizontal size.

EXPECTED RESULT
EITHER: The clipboard history wraps the text before truncating it; OR: The clipboard history truncates the text much earlier

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: NixOS
(available in About System)
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2

ADDITIONAL INFORMATION
-
Comment 1 Bug Janitor Service 2024-03-04 15:57:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3999
Comment 2 Nate Graham 2024-03-04 22:27:55 UTC
Git commit 0e74be744a39123cb681ac75bcad21f6f684f1ff by Nate Graham, on behalf of Dominique Hummel.
Committed on 04/03/2024 at 22:27.
Pushed by ngraham into branch 'master'.

klipper: limit maximum width of popup

On ultra-wide screens, it can become rather absurdly wide. This caps
the horizontal size of the Klipper popup to 640px, which is (1920 * 1/3),
so users of that common screen resolution and lower ones should see no
change.
FIXED-IN: 6.1

M  +1    -1    klipper/klipperpopup.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/0e74be744a39123cb681ac75bcad21f6f684f1ff