klipper: limit maximum width of popup

On ultra-wide screens, it can become rather absurdly wide. This caps
the horizontal size of the Klipper popup to 640px, which is (1920 * 1/3),
so users of that common screen resolution and lower ones should see no
change.

BUG: 482389
FIXED-IN: 6.1